--- a/themes/ghostium/partials/custom/navigation.hbs
+++ b/themes/ghostium/partials/custom/navigation.hbs
@@ -41,6 +41,28 @@ Ghostium uses Font Awesome you can find all icons available on the url below
   </a>
 </li>
 
+
+<li class="drawer-list-divider"></li>
+
+<li class="drawer-list-item">
+  <a href="{{@blog.url}}/2017/01/01/About-the-blog.html" data-pjax>
+    <i class="fa fa-post"></i>About the blog
+  </a>
+</li>
+
+
+<li class="drawer-list-item">
+  <a href="{{@blog.url}}/2017/05/05/Blog-posts-history.html" data-pjax>
+    <i class="fa fa-post"></i>Blog history
+  </a>
+</li>
+
+<li class="drawer-list-item">
+  <a href="{{@blog.url}}/2017/05/05/Links.html" data-pjax>
+    <i class="fa fa-post"></i>Links
+  </a>
+</li>
+
 <!--
 <li class="drawer-list-divider"></li>
 <li class="drawer-list-item drawer-list-title">
