navigation gets icon

--- a/themes/ghostium/partials/custom/navigation.hbs
+++ b/themes/ghostium/partials/custom/navigation.hbs
@@ -46,7 +46,7 @@ Ghostium uses Font Awesome you can find all icons available on the url below
 
 <li class="drawer-list-item">
   <a href="{{@blog.url}}/2017/01/01/About-the-blog.html" data-pjax>
-    <i class="fa fa-post"></i>About the blog
+    <i class="fa fa-user-o"></i>About the blog
   </a>
 </li>
 
@@ -59,7 +59,7 @@ Ghostium uses Font Awesome you can find all icons available on the url below
 
 <li class="drawer-list-item">
   <a href="{{@blog.url}}/2017/05/05/Links.html" data-pjax>
-    <i class="fa fa-post"></i>Links
+    <i class="fa fa-navicon"></i>Links
   </a>
 </li>
 
