--- a/themes/ghostium/partials/custom/navigation.hbs
+++ b/themes/ghostium/partials/custom/navigation.hbs
@@ -46,14 +46,14 @@ Ghostium uses Font Awesome you can find all icons available on the url below
 
 <li class="drawer-list-item">
   <a href="{{@blog.url}}/2017/01/01/About-the-blog.html" data-pjax>
-    <i class="fa fa-user-o"></i>About the blog
+    <i class="fa fa-rocket"></i>About the blog
   </a>
 </li>
 
 
 <li class="drawer-list-item">
   <a href="{{@blog.url}}/2017/05/05/Blog-posts-history.html" data-pjax>
-    <i class="fa fa-post"></i>Blog history
+    <i class="fa fa-bolt"></i>Blog history
   </a>
 </li>
 
