ghostium theme showing date as date and not refering to time ago

--- a/themes/ghostium/partials/post/list.hbs
+++ b/themes/ghostium/partials/post/list.hbs
@@ -17,7 +17,7 @@
     <ul class="post-item-meta-list">
       <li class="post-item-meta-item">
         <time datetime="{{date published_at format="YYYY-MM-DD"}}" itemprop="datePublished">
-          {{date published_at timeago="true"}}
+          {{date published_at timeago="false"}}
         </time>
       </li>
       {{#if tags}}
