--- a/src/assets/scss/asciidoctor/components/_variables.scss
+++ b/src/assets/scss/asciidoctor/components/_variables.scss
@@ -1,10 +1,10 @@
 // from https://github.com/asciidoctor/asciidoctor-stylesheet-factory/blob/main/sass/components/_asciidoc.scss
 
-$old-include-html-global-classes: $include-html-global-classes;
 $include-html-global-classes: false;
+$old-include-html-global-classes: $include-html-global-classes;
 $inline-list-bottom-margin: $paragraph-margin-bottom / 2 !default;
 $inline-list-item-spacing: $paragraph-margin-bottom !default;
-$include-html-global-classes: $old-include-html-global-classes;
+// $include-html-global-classes: $old-include-html-global-classes;
 
 // controls whether built-in AsciiDoc role classes are generated
 $include-asciidoc-role-classes: true !default;
