fighting with asciidoc css stuff

--- a/src/assets/scss/_asciidoctor.scss
+++ b/src/assets/scss/_asciidoctor.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@import "asciidoctor/settings/functions";
 @import "asciidoctor/settings/defaults";
 @import "asciidoctor/components/variables";
 @import "asciidoctor/components/block";
