--- a/src/assets/scss/asciidoctor/components/_variables.scss
+++ b/src/assets/scss/asciidoctor/components/_variables.scss
@@ -2,7 +2,7 @@
 
 $include-html-global-classes: false;
 $old-include-html-global-classes: $include-html-global-classes;
-$inline-list-bottom-margin: $paragraph-margin-bottom / 2 !default;
+$inline-list-bottom-margin: $paragraph-margin-bottom-half !default;
 $inline-list-item-spacing: $paragraph-margin-bottom !default;
 // $include-html-global-classes: $old-include-html-global-classes;
 
