--- a/src/assets/scss/asciidoctor/settings/_defaults.scss
+++ b/src/assets/scss/asciidoctor/settings/_defaults.scss
@@ -4,23 +4,103 @@ $body-font-color: $typographic-base-font-color;
 $header-font-family: $typographic-font-family;
 $blockquote-cite-font-color: lighten($typographic-base-font-color, 20%);
 $blockquote-cite-link-color: $blockquote-cite-font-color;
-$paragraph-font-size: $typographic-base-font-size;
-$hr-border-color: $color-base;
 $body-bg: $color-white;
-// --- others
 // from https://github.com/asciidoctor/asciidoctor-stylesheet-factory/blob/main/sass/settings/_settings.scss.dist
+$primary-color: #2ba6cb;
 $em-base: 16px;
+$paragraph-font-size: 1em;
 $paragraph-margin-bottom: emCalc(20px);
+$paragraph-margin-bottom-half: emCalc(10px);
 $header-text-rendering: optimizeLegibility;
 $panel-margin-bottom: emCalc(20px);
 $panel-padding: emCalc(20px);
 // We use these to style the <hr> element
 $hr-border-width: 1px;
 $hr-border-style: solid;
+$hr-border-color: #ddd;
 $hr-margin: emCalc(20px);
 // We use these to set default inner padding and bottom margin
 $panel-margin-bottom: emCalc(20px);
 $panel-padding: emCalc(20px);
+// We use these to control the background and border styles
+$panel-bg: darken(#fff, 5%);
+$panel-border-style: solid;
+$panel-border-size: 1px;
+// We use this % to control how much we darken things on hover
+$panel-function-factor: 10%;
+$panel-border-color: darken($panel-bg, $panel-function-factor);
+// We use these to set default inner padding and bottom margin
+$panel-margin-bottom: emCalc(20px);
+$panel-padding: emCalc(20px);
+// We use these to set default font colors
+$panel-font-color: $typographic-base-font-color;
+$panel-font-color-alt: #fff;
+// We use these to make sure border radius matches unless we want it different.
+$global-radius: 3px;
+$global-rounded: 1000px;
+// These control how subheaders are styled.
+$subheader-line-height: 1.4;
+$subheader-font-color: lighten($typographic-base-font-color, 30%);
+$subheader-font-weight: 300;
+$subheader-top-margin: .2em;
+$subheader-bottom-margin: .5em;
+// We use these to style blockquotes
+$blockquote-font-color: lighten($typographic-base-font-color, 30%);
+$blockquote-padding: emCalc(9px) emCalc(20px) 0 emCalc(19px);
+$blockquote-border: 1px solid #ddd;
+$blockquote-cite-font-size: emCalc(13px);
+$blockquote-cite-font-color: lighten($typographic-base-font-color, 20%);
+$blockquote-cite-link-color: $blockquote-cite-font-color;
+// These control the background color for the table and even rows
+$table-bg: $color-white;
+$table-even-row-bg: #f9f9f9;
+// These control the table cell border style
+$table-border-style: solid;
+$table-border-size: 1px;
+$table-border-color: #ddd;
+// These control the table head styles
+$table-head-bg: #f5f5f5;
+$table-head-font-size: emCalc(14px);
+$table-head-font-color: #222;
+$table-head-font-weight: bold;
+$table-head-padding: emCalc(8px) emCalc(10px) emCalc(10px);
+// These control the row padding and font styles
+$table-row-padding: emCalc(9px) emCalc(10px);
+$table-row-font-size: emCalc(14px);
+$table-row-font-color: $typographic-base-font-color;
+$table-line-height: emCalc(18px);
+// These are for controlling the display and margin of tables
+$table-display: table-cell;
+$table-margin-bottom: emCalc(20px);
+// Media Query Ranges
+$small-breakpoint:  em-calc(640)  !default;
+$medium-breakpoint: em-calc(1024) !default;
+$large-breakpoint:  em-calc(1440) !default;
+$xlarge-breakpoint: em-calc(1920) !default;
+// ---
+$small-range:   (0, $small-breakpoint) !default;
+$medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint) !default;
+$large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint)  !default;
+$xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint) !default;
+$xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999)) !default;
+$screen: "only screen" !default;
+$landscape: "#{$screen} and (orientation: landscape)" !default;
+$portrait: "#{$screen} and (orientation: portrait)" !default;
+$small-up: $screen !default;
+$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
+$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
+$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
+$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
+$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
+$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
+$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
+$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})" !default;
+$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})" !default;
+// --- Legacy
+$small: $small-up;
+$medium: $medium-up;
+$large: $large-up;
+
 
 
 // TIP set a value to null to disable
@@ -72,7 +152,8 @@ $code-text-rendering: inherit !default;
 $pre-font-family: Consolas, 'Liberation Mono', Courier, monospace !default;
 $pre-font-size: emCalc($em-base) !default;
 $pre-font-color: inherit !default;
-$pre-border-size: 1px !default;
+// $pre-border-size: 1px !default;
+$pre-border-size: 0;  // we don't want border around code
 $pre-border-style: solid !default;
 $pre-border-color: #ddd !default;
 $pre-bg: none !default;
