--- a/src/assets/scss/_asciidoctor.scss
+++ b/src/assets/scss/_asciidoctor.scss
@@ -2,6 +2,8 @@
 
 @import "asciidoctor/settings/functions";
 @import "asciidoctor/settings/defaults";
+@import "asciidoctor/settings/mixins";
+
 @import "asciidoctor/components/variables";
 @import "asciidoctor/components/block";
 @import "asciidoctor/components/awesome-icons";
