--- a/src/components/Post/Author/Author.module.scss
+++ b/src/components/Post/Author/Author.module.scss
@@ -12,7 +12,7 @@
   .bio {
     .twitter {
       display: block;
-      text-decoration: underline;
+      // text-decoration: underline;
     }
   }
 }
