fixing tags and category pages; adding next content from old blog

--- a/src/assets/scss/base/_definitions.scss
+++ b/src/assets/scss/base/_definitions.scss
@@ -1,10 +1,12 @@
 img.feedimage {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   height: 140px;
-  margin-top: 5px;
-  object-fit: cover;
-  object-position: 10% 50%;
-  width: 100%;
+  width: auto;
+  // height: 140px;
+  // margin-top: 5px;
+  // object-fit: cover;
+  // object-position: 10% 10%;
+  // width: 100%;
 }
 
 *:not(pre) > code {
