--- a/src/assets/scss/base/_definitions.scss
+++ b/src/assets/scss/base/_definitions.scss
@@ -1,6 +1,7 @@
 img.feedimage {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  height: 140px;
+  filter: grayscale(95%);
+  height: 110px;
   width: auto;
   // height: 140px;
   // margin-top: 5px;
