--- a/src/assets/scss/base/_prism.scss
+++ b/src/assets/scss/base/_prism.scss
@@ -2,7 +2,7 @@ code[class*="language-"],
 pre[class*="language-"] {
   color: #657b83;
   font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
-  font-size: 1em;
+  font-size: 0.82em;
   -ms-hyphens: none;
   -moz-hyphens: none;
   -webkit-hyphens: none;
@@ -20,7 +20,7 @@ pre[class*="language-"] {
 
 pre[class*="language-"] {
   border-radius: 0.3em;
-  margin: 0.5em 0;
+  margin: 0 0;
   overflow: auto;
   padding: 1em;
 }
