working with style as a next level

--- a/src/assets/scss/_asciidoctor.scss
+++ b/src/assets/scss/_asciidoctor.scss
@@ -7,3 +7,4 @@
 @import "asciidoctor/components/variables";
 @import "asciidoctor/components/block";
 @import "asciidoctor/components/awesome-icons";
+@import "asciidoctor/components/default";
