--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -65,7 +65,7 @@
     .title {
       font-size: $typographic-base-font-size * 3;
       @include line-height(2.25);
-      // @include margin-top(2.25);
+      @include margin-top(1);
       @include margin-bottom(1.5);
     }
 
